networkploicy/neuvector-scanner-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neuvector-scanner-netpol
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-scanner-pod
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: neuvector-controller-pod
    ports:
    - protocol: TCP
      port: 18402
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: neuvector-controller-pod
    ports:
    - protocol: TCP
      port: 18400
  - to:
    - podSelector:
        matchLabels:
          app: neuvector-enforcer-pod
    ports:
    - protocol: TCP
      port: 18401
