networkploicy/neuvector-updater-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: neuvector-updater-netpol
  namespace: neuvector
spec:
  podSelector:
    matchLabels:
      app: neuvector-updater-pod
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: neuvector-controller-pod
    ports:
    - protocol: TCP
      port: 18400
